fix: button overflow

--- a/src/form/button/button.scss
+++ b/src/form/button/button.scss
@@ -46,7 +46,7 @@
 }
 
 [part=master] {
-    overflow: hidden;
+    // overflow: hidden;
     padding: var(--py) var(--px);
     min-height: var(--size);
 }
